# VisualComputingProject

./: .gitignore  Makefile  README.md  check_shaders.sh
Resources/: README.md
Source/: CMakeLists.txt  IRenderStrategy.cpp  MarchingCubes.cpp  OpenGLMarcher.cpp  OpenGLStrategy.cpp  README.md  addOperatorModal.cpp  addPrimitiveModal.cpp  fragmentMarchingCubes.glsl  imgui_layer.cpp  inputController.cpp  linearizeScene.cpp  main.cpp  marchingCubes.cpp  oglMarcher.frag  opDifference.cpp  opIntersect.cpp  opModulo.cpp  opSmoothUnion.cpp  opUnion.cpp  rayMarcher.cpp  scene.cpp  sdfBox.cpp  sdfCylinder.cpp  sdfPlane.cpp  sdfSphere.cpp  shaderProgram.cpp  texturedScreenQuad.cpp  vertexMarchingCubes.glsl  vertexScreenQuad.glsl  worldObject.cpp
Source/Libraries/include/glad/: glad.h
Source/Libraries/lib/: glfw3.lib
Source/Libraries/src/: glad.c  stb_image.cpp
Source/header/: Functions.h  IRenderStrategy.h  MarchingCubes.h  OpenGLMarcher.h  OpenGLStrategy.h  addOperatorModal.h  addPrimitiveModal.h  iDrawable.h  imgui_layer.h  inputController.h  linearizeScene.h  main.h  marchingCubes.h  opDifference.h  opIntersect.h  opModulo.h  opSmoothUnion.h  opUnion.h  rayMarcher.h  renderTypes.h  scene.h  screenSpaceTriangle.h  sdfBox.h  sdfCylinder.h  sdfPlane.h  sdfSphere.h  shaderProgram.h  texturedScreenQuad.h  types.h  vecUtils.h  worldObject.h
Source/shaders/: fragmentScreenQuad.frag  marching_cubes.frag  oglMarcher.frag  simple.frag  simple.vert  sphere.frag
